observation UI styling and behavior completed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,11 @@ html, body, .bg {
 .bg-foreground {
     background-color: #FAFAFA;
 }
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: inherit;
+}
